# conformal-eq

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
modules/: CMakeLists.txt
python/: helpers.py  truncated_spectral_discretization.py
src/: CmakeLists.txt  ConformalEQ.cpp  ConformalEQ.h  pch.h
src/dsp/: FilterDesign.cpp  FilterDesign.h  SpectralDiscretize.h  coefs.h  sos.h
src/gui/: Figure.cpp  Figure.h  FilterPlot.h  champLAF.cpp  champLAF.h
src/gui/assets/: gui.xml
